--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "12.3.0",
+    "nodemon": "^2.0.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
