--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "gti-gts",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.17.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,6 +12,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.1",
     "next": "12.3.0",
     "nodemon": "^2.0.19",
     "react": "18.2.0",
