--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "12.3.0",
     "nodemon": "^2.0.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.35.0"
   },
   "devDependencies": {
     "eslint": "8.23.0",
