--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
- 
-  "extends": "next/core-web-vitals",
-  "rules": { "react/no-unescaped-entities": 0 } 
+  "extends": ["next/babel","next/core-web-vitals"]
 }
+
+
+
