--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "gti-gts",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.17.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
