--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "nodemon": "^2.0.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.35.0"
+    "react-hook-form": "^7.35.0",
+    "yarn-install": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "8.23.0",
