--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.4",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.10.0",
     "mongoose": "^6.6.1",
     "next": "12.3.0",
+    "next-auth": "^4.10.3",
     "nodemon": "^2.0.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
