--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.35.0",
+    "sweetalert": "^2.1.2",
     "yarn-install": "^1.0.0"
   },
   "devDependencies": {
